Update BinarySearchTree.java